# parsemind

./: .gitignore  Makefile  README.md  parsemind.py  pyproject.toml  requirements.txt
doc/: todo.md
documentation/: todo.md
examples/: example_call_ollama.py  example_get_labels.py  example_get_last_message_in_label_from_sender.py  example_get_weeks_after.py  example_print_summary.py  example_scholar.py  example_send_email.py
output/: .gitignore
parsemind/: __init__.py
scripts/: authorize_and_save_token.py  delete_last_markdown_edition.py  generate_summary.py  generate_summary_collection.py  generate_summary_of_last_week.py  update_markdown_homepage.py
tests/: test_examples.py
