[project]
name = "parsemind"
version = "0.0.1"
description = "ParseMind is an LLM-powered tool that parses and summarizes newsletters into clean, concise insights."
readme = "README.md"
authors = [
    { name = "Andrea Bonetti", email = "andrea.bonetti@alumni.epfl.ch" }
]
dependencies = []

[tool.ruff]
include = ["parsemind.py", "examples", "tests"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]
