[build-system]
requires = ["setuptools"]
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
include = [
    "parsemind",
    "examples"
]

[project]
name = "parsemind"
version = "0.0.1"
description = "ParseMind is an LLM-powered tool that parses and summarizes newsletters into clean, concise insights."
readme = "README.md"
authors = [
    { name = "Andrea Bonetti", email = "andrea.bonetti@alumni.epfl.ch" }
]
dependencies = []

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "single"
